--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "D:/Development/income-expanses/incomeandexpansesapp/linux"
+    "cmake.sourceDirectory": "D:/Development/income-expanses/incomeandexpansesapp/linux",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
