--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider: ^2.1.2
   path: ^1.9.0
   flutter_launcher_icons: ^0.14.2
+  gsheets: ^0.5.0
 
 dev_dependencies:
   flutter_test:
